--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda online de remeras oversize: descubre nuestra colección de ropa cómoda con estilo. Envíos a todo el país.">
+    <title>Ropa Oversize - Oversize Clothes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="../css/Nosotros.css">
-    <title>Oversize Clothes</title>
 </head>
 <body>
     <header> 
@@ -35,46 +35,45 @@
         </div>
     </main>
         
-        <section class="container tienda">
-            <h2>Nuestros modelos de remeras</h2>
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/remera1.jpg" class="card-img-top" alt="Remera 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Remera Oversize</h5>
-                            <p class="card-text">$20.00</p>
-                            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/remera2.jpg" class="card-img-top" alt="Remera 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Remera Estampada</h5>
-                            <p class="card-text">$25.00</p>
-                            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/remera3.jpg" class="card-img-top" alt="Remera 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Remera Larga</h5>
-                            <p class="card-text">$30.00</p>
-                            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                        </div>
+    <section class="container tienda">
+        <h2>Nuestros modelos de remeras</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/remera1.jpg" class="card-img-top" alt="Remera oversize">
+                    <div class="card-body">
+                        <h5 class="card-title">Remera Oversize</h5>
+                        <p class="card-text">$20.00</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/remera2.jpg" class="card-img-top" alt="Remera estampada">
+                    <div class="card-body">
+                        <h5 class="card-title">Remera Estampada</h5>
+                        <p class="card-text">$25.00</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/remera3.jpg" class="card-img-top" alt="Remera larga">
+                    <div class="card-body">
+                        <h5 class="card-title">Remera Larga</h5>
+                        <p class="card-text">$30.00</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
-            <h4>Mail oversizeclothes@gmail.com</h4>
+            <h4>Mail: oversizeclothes@gmail.com</h4>
             <h4>Teléfono: 3415 549 817</h4>
         </div>
     </footer>
