--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <title>Oversize Clothes</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tienda online de remeras oversize: descubre nuestra colección de ropa cómoda con estilo. Envíos a todo el país.">
+        <title>Ropa Oversize - Oversize Clothes</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/estilo.css">
+    </head>
 <body>
     <header> 
-        <div> <img src="../img/OVER UNIVERSITY ROSA FUARK.jpg" alt="Logo Oversize"></div>
-        <h1>Oversize Clothes</h1>
-        <h2>Ropa comoda con estilo</h2>
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="Producto.html">Prodcutos</a></li>
-                <li><a href="Contacto.html">Contactos</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <img src="../img/OVER UNIVERSITY ROSA FUARK.jpg" alt="Logo Oversize" class="logo">
+            <h1>Oversize Clothes</h1>
+            <h2>Ropa cómoda con estilo</h2>
+            <nav>
+                <ul class="menu">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./Nosotros.html">Nosotros</a></li>
+                    <li><a href="./Producto.html">Productos</a></li>
+                    <li><a href="./Contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
