--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <title>Oversize Clothes</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tienda online de remeras oversize: descubre nuestra colección de ropa cómoda con estilo. Envíos a todo el país.">
+        <title>Ropa Oversize - Oversize Clothes</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/estilo.css">
+    </head>
 <body>
     <header> 
-        <div> <img src="../img/OVER UNIVERSITY ROSA FUARK.jpg" alt="Logo Oversize"></div>
-        <h1>Oversize Clothes</h1>
-        <h2>Ropa comoda con estilo</h2>
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="Producto.html">Prodcutos</a></li>
-                <li><a href="Contacto.html">Contactos</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <img src="../img/OVER UNIVERSITY ROSA FUARK.jpg" alt="Logo Oversize" class="logo">
+            <h1>Oversize Clothes</h1>
+            <h2>Ropa cómoda con estilo</h2>
+            <nav>
+                <ul class="menu">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./Nosotros.html">Nosotros</a></li>
+                    <li><a href="./Producto.html">Productos</a></li>
+                    <li><a href="./Contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
+        <div class="container main-content">
+            <div class="main-text">
        <h2>Nosotros</h2>
        <p>
         ¡Bienvenidos a Oversize Clothes! Somos mucho más que una marca de ropa, somos una experiencia de moda que celebra la autenticidad y la comodidad. Especializados en el estilo oversize, hemos transformado la moda para que se ajuste a tu vida, permitiéndote expresar tu verdadera esencia sin comprometer la elegancia.
@@ -32,6 +38,8 @@ Cada prenda que ofrecemos es más que tela y costuras; es una declaración de in
 
 Explora nuestro catálogo y descubre cómo la moda oversize de Oversize Clothes! no solo viste cuerpos, sino que celebra la diversidad, el confort y el estilo propio. ¡Bienvenidos a la revolución de la moda, donde la autenticidad es el nuevo negro!
        </p>
+       </div>
+       </div>
     </main>
 
     <footer>
